syntax = "proto3";
package im_service.glide_im.github.com;

option go_package = "pkg/proto";

message Response {
  enum ResponseCode {
    OK = 0;
    ERROR = 1;
  }

  int32 code = 1;
  string msg = 2;
}

message SetIDRequest {
  string old_id = 1;
  string new_id = 2;
}

message ExitClientRequest {
  string id = 1;
}

message IsOnlineRequest {
  string id = 1;
}

message IsOnlineResponse {
  bool online = 1;
}

message EnqueueMessageRequest {
  string id = 1;
  bytes msg = 2;
}